switching to ems because that's the way it should be

--- a/Personal/templ/skills.html
+++ b/Personal/templ/skills.html
@@ -2,11 +2,11 @@
 	<div class="skills-container" id="Skills">
 		<div class="row text-center">
 			<div class="col-sm-4">
-				<h3>My Life</h3>
+				<h3 class="text-left">My Life</h3>
 				<hr>
-				<p class="text-left" style="padding-left: 4em;">My name is Adam Wechter</p>
-				<p class="text-left" style="padding-left: 4em;">I was raised and live in Pittsburgh, currently Lawrenceville</p>
-				<p class="text-left" style="padding-left: 4em;">I am an aspiring software developer with most of my background being in Java</p>
+				<p class="text-left skills-about" style="padding-left: 4em;">My name is Adam Wechter</p>
+				<p class="text-left skills-about" style="padding-left: 4em;">I was raised and live in Pittsburgh, currently Lawrenceville</p>
+				<p class="text-left skills-about" style="padding-left: 4em;">I am an aspiring software developer with most of my background being in Java</p>
 				<ul id="about-list" class="text-left">
 					<li class="list-padding">Runs robotics program at Sarah Heinz boys and girls club</li>
 					<li class="list-padding">Apprenticed for furniture maker for 5 years</li>
@@ -16,7 +16,7 @@
 				</ul>
 			</div>
 			<div class="col-sm-4">
-				<h3>My Skills</h3>
+				<h3 class="text-left">My Skills</h3>
 				<hr>
 				<div class="row">
 					<div class="col-sm-4" id="skill-list">
@@ -58,7 +58,7 @@
 				</div>
 			</div>
 			<div class="col-sm-4">
-				<h3>My Contact</h3>
+				<h3 class="text-left">My Contact</h3>
 				<hr>
 				<ul class="text-left" id="contact-list">
 					<!-- TODO: change icons to better ones or something... !-->
@@ -68,11 +68,10 @@
 					<li><span class="glyphicon glyphicon-briefcase"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/in/wechtera">LinkedIn</a></li>
 					<li><span class="glyphicon glyphicon-cloud"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.github.com/wechtera">Github</a></li>
 				</ul>
-						
+
 			</div>
 		</div>
 	<hr>
-		
+
 	</div>
 </template>
- 
