--- a/Personal/Personal.html
+++ b/Personal/Personal.html
@@ -1,5 +1,7 @@
 <head>
 	<title>Adam Wechter</title>
+	<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
