Some more resizing updates

--- a/Personal/templ/home.html
+++ b/Personal/templ/home.html
@@ -1,10 +1,11 @@
 <template name="home">
-	<div class="container-fluid">
+	<div class="main-cont container-fluid">
 		{{> zoombar}}
 		{{> intro}}
 		{{> skills}}
 		{{> projects}}
 		{{> education}}
-		{{> footer}}
+
 	</div>
+{{> footer}}
 </template>
