--- a/Personal/templ/intro.html
+++ b/Personal/templ/intro.html
@@ -2,24 +2,27 @@
 	<div class="introContainer">
 		<h1 class="namePlate text-center" id="About">Adam Wechter</h1>
 		<div class="details">
-			<div class="row" style="padding-right: 15%; padding-left:15%;">
+			<div class="text-center">
+				<h1 id="titles">Developer  |  Instructor  |  Nerd </h1>
+				<!-- asf
 				<h3 class="col-sm-3 text-left header-small">Developer</h3>
 				<h3 class="col-sm-1 text-center header-small">|</h3>
 				<h3 class="col-sm-4 text-center header-small">Instructor</h3>
 				<h3 class="col-sm-1 text-center header-small">|</h3>
 				<h3 class="col-sm-3 text-left header-small">Nerd</h3>
+			-->
 			</div>
 		</div>
 		<div class="media">
 			<div class="media-left myPic">
 				<img class="my_Pic" src="http://i.imgur.com/ruLwW4E.jpg" alt="...">
 			</div>
-			<div class="media-body">
+			<div class="media-body ">
 				<h4 class="media-heading">Hello, I'm Adam Wechter,</h4>
-					<p  style="padding-right: 10%; padding-left: 5%;">An inspiring software developer living currently in the Pittsburgh region.  I enjoy working on personal projects to satisfy my nerdy hobbies and passions.  I work with kids at the Sarah Heinz House on the North side where I have the privlige of co-running their robotics programs for preschooelrs, to high schoolers.  My various interests outside of programming is biking, climbing, video games, and cooking.
+					<p  style="margin-right: 10%; margin-left: 5%;">An inspiring software developer living currently in the Pittsburgh region.  I enjoy working on personal projects to satisfy my nerdy hobbies and passions.  I work with kids at the Sarah Heinz House on the North side where I have the privlige of co-running their robotics programs for preschooelrs, to high schoolers.  My various interests outside of programming is biking, climbing, video games, and cooking.
 					</p>
 
-					<p style="padding-right: 10%; padding-left: 5%;">
+					<p style="margin-right: 10%; margin-left: 5%;">
 					My belief is that software is made to make life easier for the end user; so whether it be the smallest conveinece of automating a task, or using software to assist learning and problem solving in our youth, my goal is to improve the quality of life of any person that may use my projects.
 					</p>
 			</div>
