--- a/Personal/templ/skills.html
+++ b/Personal/templ/skills.html
@@ -1,7 +1,7 @@
 <template name="skills">
-	<div class="skills-container" id="Skills">
+	<div class="skills-container container-fluid" id="Skills">
 		<div class="row text-center">
-			<div class="col-sm-4">
+			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 				<h3 class="text-left">My Life</h3>
 				<hr>
 				<p class="text-left skills-about" style="padding-left: 4em;">My name is Adam Wechter</p>
@@ -15,11 +15,11 @@
 					<li class="list-padding">Have climbed all over the United States</li>
 				</ul>
 			</div>
-			<div class="col-sm-4">
+			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 				<h3 class="text-left">My Skills</h3>
 				<hr>
 				<div class="row">
-					<div class="col-sm-4" id="skill-list">
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" id="skill-list">
 						<ul id="prof-list" class="text-left">
 							<li class="list-padding">Java</li>
 							<li class="list-padding">Javascript</li>
@@ -37,7 +37,7 @@
 							<li class="list-padding">Git</li>
 						</ul>
 					</div>
-					<div class="col-sm-8">
+					<div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
 						<ul id="skill-bar-list" class="text-left">
 							<li class="list-padding"><div style="width: 90%" class="skill-bars"></div></li>
 							<li class="list-padding"><div style="width: 60%" class="skill-bars"></div></li>
@@ -57,7 +57,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-sm-4">
+			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 				<h3 class="text-left">My Contact</h3>
 				<hr>
 				<ul class="text-left" id="contact-list">
