Lots of changes, added back to top arrow, restructured a bit, fixxed font, 99% done.  Need a good snap shot of my face and maybe changing my cover picture

--- a/Personal/templ/zoombar.html
+++ b/Personal/templ/zoombar.html
@@ -1,5 +1,5 @@
 <template name="zoombar">
-	<div class="zoomBar">
+	<div class="zoomBar" id="zoombar">
 		<div class="row-fluid" id="zoombarr">
 			<a href="#About" id="zoomAbout" class="col-sm-3 text-center zoomLabels"> About </a>
 			<a href="#Skills" id="zoomSkills"  class="col-sm-3 text-center zoomLabels"> Skills </a>
