--- a/Personal/Personal.html
+++ b/Personal/Personal.html
@@ -2,8 +2,10 @@
 	<title>Adam Wechter</title>
 	<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" id="font-awesome-css" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" type="text/css" media="screen">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 		{{RenderPage}}
+		<a href="#zoombar" class="back-to-top" id="gototop"> <i class="fa fa-arrow-circle-up"></i> </a>
 </body>
