--- a/Personal/templ/projects.html
+++ b/Personal/templ/projects.html
@@ -4,7 +4,7 @@
 		<hr width="60%" align="left">
 		<div class="row text-center" style="padding-top: 5%;">
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-				<img class="img-circle" src="http://i.imgur.com/0nwggSk.png" width="140" height="140">
+				<img class="img-circle" src="rsc/comp.png" width="140" height="140">
 					<h2>Senior Comprehensive</h2>
 					<p style="width: 90%; padding-left: 5%;">Empirical study of optimizing traffic control system using a genetic algorithm on a mesoscopic map implemented in Java</p>
 					<p>
@@ -12,7 +12,7 @@
 					</p>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-				<img class="img-circle" src="http://i.imgur.com/gj6hnfL.png" width="140" height="140">
+				<img class="img-circle" src="rsc/flashSite.png" width="140" height="140">
 					<h2>Flash Card Applet</h2>
 					<p style="width: 90%; padding-left: 5%;">Meteor driven website for flashcard deck creation and studying
 						<br><br>
@@ -22,7 +22,7 @@
 					</p>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-				<img class="img-circle" src="http://i.imgur.com/oWrwNx3.png" width="140" height="140">
+				<img class="img-circle" src="rsc/DND.png" width="140" height="140">
 					<h2>DND Dice Roller</h2>
 					<p style="width:90%; padding-left:5%">Simple dice roller with plans of more complexity to make game night more convenient<br><br></p>
 					<p>
