--- a/Personal/templ/skills.html
+++ b/Personal/templ/skills.html
@@ -64,7 +64,7 @@
 					<!-- TODO: change icons to better ones or something... !-->
 					<li><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;wechtera@gmail.com</li>
 					<li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(412) 651.4721</li>
-					<li><span class="glyphicon glyphicon-file"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://www.dropbox.com/sh/vpfga3rkqoljws0/AADd8cnqFzTiKY0CyjF2_LRra?dl=0">Resume</a></li>
+					<li><span class="glyphicon glyphicon-file"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://www.dropbox.com/s/e1nfumbc66xu0qu/wechterresumev3.pdf?dl=0">Resume</a></li>
 					<li><span class="glyphicon glyphicon-briefcase"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/in/wechtera">LinkedIn</a></li>
 					<li><span class="glyphicon glyphicon-cloud"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.github.com/wechtera">Github</a></li>
 				</ul>
